vlib/v/checker/tests/json_decode_invalid_string.out
vlib/v/checker/tests/json_decode_invalid_string.vv:7:8: error: json.decode: invalid json string
    5 | }
    6 | 
    7 | txt := '"{"host": "localhost"}'
      |        ~~~~~~~~~~~~~~~~~~~~~~~~
    8 | json.decode(TestStruct, txt)!
    9 | json.decode(TestStruct, txt.trim_string_right('"'))!
vlib/v/checker/tests/json_decode_invalid_string.vv:10:25: error: json.decode: invalid json string
    8 | json.decode(TestStruct, txt)!
    9 | json.decode(TestStruct, txt.trim_string_right('"'))!
   10 | json.decode(TestStruct, 'h{ost: "localhost"}')!
      |                         ~~~~~~~~~~~~~~~~~~~~~
