vlib/v/checker/tests/json_decode_invalid_string.vv
import json

struct TestStruct {
	host string
}

txt := '"{"host": "localhost"}'
json.decode(TestStruct, txt)!
json.decode(TestStruct, txt.trim_string_right('"'))!
json.decode(TestStruct, 'h{ost: "localhost"}')!
